RESOLVED FIXED268367
Have ResourceResponse use String members instead of AtomString
https://bugs.webkit.org/show_bug.cgi?id=268367
Summary Have ResourceResponse use String members instead of AtomString
Jean-Yves Avenard [:jya]
Reported 2024-01-30 01:58:38 PST
Required for implementation of bug 235353 We need to be able to pass ResourceResponse across threads.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-30 01:59:03 PST
Jean-Yves Avenard [:jya]
Comment 2 2024-01-30 02:40:45 PST
EWS
Comment 3 2024-01-30 13:14:32 PST
Committed 273784@main (54068d0bb018): <https://commits.webkit.org/273784@main> Reviewed commits have been landed. Closing PR #23500 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.