Source/WebCore/Modules/websockets/WebSocketHandshake.h
@@ -88,7 +88,7 @@ public:
 
 private:
 
-    int readStatusLine(const uint8_t* header, size_t headerLength, int& statusCode, AtomString& statusText);
+    int readStatusLine(const uint8_t* header, size_t headerLength, int& statusCode, String& statusText);
 
     // Reads all headers except for the two predefined ones.
     const uint8_t* readHTTPHeaders(const uint8_t* start, const uint8_t* end);
